--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,134 +1,116 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap');
-$primary-bg-color: #F7B1AB;
-$secondary-bg-color: #807182;
-$font-color: rgba(0,0,0,.8);
-$font-family: 'Montserrat',sans-serif;
-$form-border-color: rgba(0,0,0,.1);
-
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  /* box-sizing: border-box; */
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    /* background-color: darkseagreen; */
-    align-items: center;
-    /* background: #D8AA96; */
-    /* color: $font-color; */
-    display: grid;
-    /* font-family: $font-family; */
-    font-size: 14px;
-    font-weight: 400;
-    height: 100vh;
-    justify-items: center;
-    /* weight: 100vw; */
+body {
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  display: grid;
+  font-size: 14px;
+  font-weight: 400;
+  height: 100vh;
+  justify-items: center;
 }
+
 .container {
-    width: 70%;
-    height: 80vh;
-    margin: auto;
-    /* background-color: floralwhite; */
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    grid-template-areas: "left right";
-    max-width: 900px;
-}
-.title {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: darkturquoise;
-    width: 100%;
-    font-size:  min(max(70px, 4vw), 40px);
-    /* font-size: 28px; */
-    font-weight: 600;
-    
-}
-.formcontainer {
-    width: 70%;
-    height: 30%;
-    /* background-color: forestgreen; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 70%;
-    /* background-color: fuchsia; */
+  width: 70%;
+  height: 80vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  grid-template-areas: "left right";
+  max-width: 900px;
 }
 
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: darkturquoise;
+  width: 100%;
+  font-size: min(max(70px, 4vw), 40px);
+  font-weight: 600;
+}
+
+.formcontainer {
+  width: 70%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 70%;
+}
 
 .inputs {
-    /* border: 1px solid ç˚ç$form-border-color; */
-    border-radius: 4px;
-    height: 38px;
-    line-height: 38px;
-    padding-left: 5px;
+  border-radius: 4px;
+  height: 38px;
+  line-height: 38px;
+  padding-left: 5px;
 }
 
-.buttons{
-    border: 1px solid rgba(0,0,0,.2);
-    height: 38px;
-    line-height: 38px;
-    width: 100px;
-    /* border-radius: 19px; */
+.buttons {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  height: 38px;
+  line-height: 38px;
+  width: 100px;
 }
 
-.result{
-    width: 70%;
-    height: 30%;
-    /* background: chartreuse; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.result {
+  width: 70%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.resulttable{
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-
+.resulttable {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .resulttable thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
+  background-color: #009879;
+  color: #fff;
+  text-align: left;
 }
 
 .resulttable th,
 .resulttable td {
-    padding: 12px 15px;
+  padding: 12px 15px;
 }
 
 .resulttable tbody tr {
-    border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #ddd;
 }
 
 .resulttable tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+  background-color: #f3f3f3;
 }
 
 .resulttable tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+  border-bottom: 2px solid #009879;
 }
 
 .resulttable tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
+  font-weight: bold;
+  color: #009879;
 }
