--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,7 +16,7 @@ body {
 
 .container {
   width: 70%;
-  height: 80vh;
+  height: 100%;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -27,6 +27,8 @@ body {
 }
 
 .title {
+  width: 70%;
+  height: 5%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -35,11 +37,17 @@ body {
   width: 100%;
   font-size: 3vw;
   font-weight: 600;
+  color: rgb(250, 252, 250);
+}
+
+.btnNewBook{
+  width: 70%;
+  height: 5%;
 }
 
 .formcontainer {
   width: 70%;
-  height: 30%;
+  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,7 +60,8 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 70%;
+  height: 100%;
+  display: none;
 }
 
 .inputs {
@@ -71,10 +80,10 @@ body {
 
 .result {
   width: 70%;
-  height: 30%;
+  height: 50%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .resulttable {
